Closed Bug 1342833 Opened 9 years ago Closed 9 years ago

WebRenderBridgeParent::ClearResources() does not clear DisplayList

Categories

(Core :: Graphics: WebRender, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla55

People

(Reporter: sotaro, Assigned: sotaro)

References

Details

Attachments

(1 file, 3 obsolete files)

WebRenderBridgeParent::ClearResources() is called during WebRenderBridgeParent destruction. It delete several resources related to webrender. But it does not clear DisplayList that is related to pipeline id.
There is a issue related to it. But it seems better to clean it as much as possible by using current API soon. https://github.com/servo/webrender/issues/691 https://github.com/servo/webrender/issues/930
Blocks: webrender
Attachment #8841414 - Flags: review?(jmuizelaar)
Assignee: nobody → sotaro.ikeda.g
Attachment #8841414 - Flags: review?(jmuizelaar)
Blocks: 1343764
Bug 1341064 removes mBuilder.
Attachment #8842852 - Flags: review?(jmuizelaar)
Comment on attachment 8842852 [details] [diff] [review] patch - Clear DisplayList in WebRenderBridgeParent::ClearResources() Review of attachment 8842852 [details] [diff] [review]: ----------------------------------------------------------------- ::: gfx/webrender_bindings/src/bindings.rs @@ +273,5 @@ > + > + api.set_root_display_list(Some(root_background_color), > + epoch, > + LayoutSize::new(0.0, 0.0), > + (pipeline_id, dl, aux), You can just call frame_builder.dl_builder.finalize() directly here instead of assigning it to the variables above.
Attachment #8842852 - Flags: review?(jmuizelaar) → review+
Pushed by sikeda@mozilla.com: https://hg.mozilla.org/projects/graphics/rev/83bb36588e3a WebRenderBridgeParent::ClearResources() does not clear DisplayList r=jrmuizel
Status: NEW → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: