Bug 1342833 - WebRenderBridgeParent::ClearResources() does not clear DisplayList r=jrmuizel